Use Mise and update Scala + sbt (#44)